# StairwayDetectionGUI

./: CMakeLists.txt  CMakeLists_V2.txt  README.md
include/stairs/: pclviewer.h  splitmerge.h
src/: main.cpp  pclviewer.cpp  pclviewer.ui  recognition.cpp
